# epoch-ai-cup

./: .gitignore  CLAUDE.md  E176_FULL_REPORT.md  EXPERIMENTS.md  FINAL_ARCHITECTURE.md  MODELING_PLAN.md  README.md  RESEARCH.md  Statement.md  TRACKER.md  adv_weights_e28.npy  analysis_output.txt  check_clustering.py  check_contextual.py  check_corr.py  check_exact_time.py  check_flock_time.py  check_flock_variance.py  check_gbif.py  check_graph_smoothing.py  check_hour.py  check_ipf.py  check_knn.py  check_leak.py  check_lomo_leak.py  check_mega.py  check_mlp.py  check_night.py  check_obs_smoothing.py  check_pairs.py  check_pigeons.py  check_preds.py  check_preds2.py  check_primary.py  check_propagation.py  check_purity.py  check_shared_prior.py  check_smoothing.py  check_space_time.py  check_test_ctx.py  (+106 more)
.omc/: project-memory.json
.omx/: metrics.json  notepad.md
.serena/: project.yml
data/: _cached_test_features_v2.hash  _cached_test_features_v2.pkl  _cached_test_features_v3.v3hash  _cached_test_rcs_linear.pkl  _cached_train_features.pkl  _cached_train_features_v2.pkl  _cached_train_rcs_linear.pkl  _cleanlab_cache.npz  _flock_model.pkl  alerstam_2007_s1.raw  best_features_e166.txt  best_features_e175.txt  description.md  gbif_monthly_counts.csv  gbif_monthly_priors.csv  knmi_hourly_277.csv  knmi_raw.txt  physics_features.txt  sample_submission.csv  test_solar.csv  test_weather.csv
docs/: CONGRESS_NETWORKING_PLAYBOOK.md  CONGRESS_PROFILE.md  GUIDELINES.md  JURY_PITCH_DOSSIER.md  JURY_TARGETING_PLAYBOOK.md  architecture_description.md
experiments/: audit_deep.py  (+216 more)
(+762 files in other folders)
